Filter z-index fixed. ChartSettingsGroup.svelte subheader color change.

--- a/src/SentimentAnalysisApp/frontend/src/theme/app.scss
+++ b/src/SentimentAnalysisApp/frontend/src/theme/app.scss
@@ -75,6 +75,7 @@ body,
 }
 
 .app-main-content > section {
+  min-height: 1000px;
   max-width: 1200px;
   padding: 2rem;
   flex: 1;
